[ADD] page login UI

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-  "appId": "io.ionic.starter",
-  "appName": "appking",
+  "appId": "com.app.safecar",
+  "appName": "SafeCar",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www",
