--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -10,7 +10,8 @@ android {
 apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
 
-
+    implementation "com.facebook.android:facebook-android-sdk:5.13.0"
+    implementation "com.android.support:support-v4:27.+"
 }
 
 
