--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
     "@capacitor/android": "^2.4.0",
     "@capacitor/core": "2.4.0",
     "@ionic-native/core": "^5.0.7",
+    "@ionic-native/facebook": "^5.31.1",
     "@ionic-native/file-opener": "^5.28.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/pwa-elements": "^3.0.1",
     "@mobiscroll/angular": "https://npm.mobiscroll.com/@mobiscroll/angular-trial/-/angular-trial-4.10.6.tgz",
+    "angularfire2": "^5.4.2",
     "bootstrap": "^4.5.2",
+    "cordova-plugin-facebook4": "^6.4.0",
     "cordova-plugin-file-opener2": "^3.0.5",
-    "firebase": "^7.18.0",
+    "firebase": "^7.24.0",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
     "pdfmake": "^0.1.68",
